Deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  strategy: 
    type: Recreate
  template:
    spec:
      serviceAccountName: jenkins
      volumes:
      - name: configuration-as-code
        configMap:
          name: configuration-as-code
      containers:
      - name: jenkins
        image: localhost/jenkins-local
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: configuration-as-code
          mountPath: /var/jenkins_home/casc_configs/
        resources:
          requests:
            memory: "2Gi"
            cpu: '1'
          limits:
            memory: "2Gi"
            cpu: '1'
