Deployment/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
spec:
  serviceName: jenkins
  template:
    spec:
      serviceAccountName: jenkins
      volumes:
      - name: configuration-as-code
        configMap:
          name: configuration-as-code
      containers:
      - name: jenkins
        image: localhost/jenkins-local
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - name: configuration-as-code
          mountPath: /var/jenkins_home/casc_configs/
        - name: jenkins-storage
          mountPath: /var/jenkins_home
        resources:
          requests:
            memory: "2Gi"
            cpu: '1'
          limits:
            memory: "2Gi"
            cpu: '1'

  volumeClaimTemplates:
  - metadata:
      name: jenkins-storage
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
