Deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: agent 
    port: 50000
    protocol: TCP
  type: NodePort
